bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: '}' expected but 'case' found.
m case {
  ^BDR2:24: error: eof expected but '}' found.
}
^